# studentScore

./: README.md  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: fad1cafdf12b_adding_student_and_score_models.py
app/: main.py  score_repository.py  student_repository.py
