[tool.poetry]
name = "studentScore"
version = "0.1.0"
description = ""
authors = ["Kamila <tashimovakamila1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
attrs = "^23.1.0"
SQLAlchemy = "^2.0.19"
pydantic = "^2.1.1"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
